compiler/testData/diagnostics/tests/CompareToWithErrorType.kt
// !WITH_NEW_INFERENCE
fun test() {
  if (<!UNRESOLVED_REFERENCE!>x<!> <!NI;COMPARE_TO_TYPE_MISMATCH, DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>><!> 0) {

  }
}